Finished header and menu

--- a/index.html
+++ b/index.html
@@ -13,14 +13,36 @@
     <title>Business Project</title>
 </head>
 <body>
+
+    <nav class="navbar">
+        <div class="logo">
+            <a href="#">
+                <span>B</span>usiness <span>P</span>roject
+            </a>
+        </div>
+        <div class="nav-list">
+            <a href="#" class="nav-link">Home</a>
+            <a href="#" class="nav-link">About</a>
+            <a href="#" class="nav-link">Pricing</a>
+            <a href="#" class="nav-link">About us</a>
+            <a href="#" class="nav-link">Contact</a>
+        </div>
+    </nav>
+
+    <div class="menu">
+        <div class="line line-1"></div>
+        <div class="line line-2"></div>
+        <div class="line line-3"></div>
+    </div>
+
     <div class="container">
         <section class="section-1">
             <div class="banner">
                 <h1 class="banner-heading">
                     <span class="heading-1">Lorem Ipsum</span>
-                    <!-- <span class="heading-2">Lorem Ipsum</span>
-                    <span class="heading-3">Lorem Ipsum</span>
-                    <span class="heading-4">Lorem Ipsum</span> -->
+                    <span class="heading-2">Dolor sit amet</span>
+                    <span class="heading-3">Consectetur adipiscing elit</span>
+                    <span class="heading-4">sed do eiusmod tempor</span>
                 </h1>
                 <p class="banner-paragraph">Lorem ipsum dolor sit.</p>
                 <button class="banner-btn">Discover Now</button>
